added score html

--- a/index .html
+++ b/index .html
@@ -13,8 +13,10 @@
 </head>
 
 <body>
+    <!--scores-->
+    <a href="score.html">View Highscores</a>
     <!-- This is a wrapper -->
-    <div class="wrapper" id="wrapper">å
+    <div class="wrapper" id="wrapper">
         <!-- Div for timer -->
         <div class="set-timer" id="timer"></div>
         <!-- Div for quiz content -->
@@ -23,7 +25,7 @@
             <p>Try to answer the questions correcly for every wrong answer you will be penalized 10 seconds.</p>
             <ul class="choices" data-choices-id="1"></ul>
             <!-- Buttons -->
-            <button  class="btn start-btn" data-time-id="begin">Start Quiz</button>
+            <button  class="btn-start" id="beginTime">Start Quiz</button>
         </div>
 
     </div>
