--- a/score.html
+++ b/score.html
@@ -27,7 +27,7 @@
             <button class="clear" id="clear" value="reset">Clear Highscore</button>
         </div>
     </div>
-    <script src="assets/js/score.js"></script>
+    <script src="score.js"></script>
 </body>
 
 </html>
